<resources>
    <string name="app_name">Product List</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Product List App</string>
    <string name="nav_header_subtitle">Floating Panda Studios</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_products">Products</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_export_import">Export/Import Product List CSV</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>

    <string name="category_name_hint">Category Name</string>
    <string name="category_name_exists_error">Category name already used. Please enter a different name.</string>
    <string name="category_name_general_error">You must enter something for a category name.</string>
    <string name="category_save_button">Save</string>
    <string name="category_cancel_button">Cancel</string>

    <string name="product_barcode_hint">Barcode</string>
    <string name="product_name_hint">Name</string>
    <string name="product_price_hint">Price (in pounds)</string>
    <string name="product_category_hint">Select Category</string>
    <string name="product_notes_hint"></string>
</resources>