<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_products" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_export_import"
            android:icon="@drawable/ic_menu_export_import"
            android:title="@string/menu_export_import" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings"
            />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/menu_help"
            />
    </group>
</menu>