<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="viewModel"
            type="com.floatingpanda.productlist.ui.categories.CategoryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/category_name_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/category_name_hint"
            app:helperTextTextColor="#FFCC00"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/category_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:text="Hello"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/category_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="32dp"
            android:text="@string/category_save_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_name_wrapper"
            android:onClick="@{() -> viewModel.addCategoryAndGoBack()}"/>

        <Button
            android:id="@+id/category_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="@string/category_cancel_button"
            app:layout_constraintRight_toLeftOf="@id/category_save_button"
            app:layout_constraintTop_toTopOf="@id/category_save_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>